Update all dependencies to the latest version

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,9 @@
     </span>
   </md-toolbar>
   <div class="padding-top padding-right padding-left">
-    <md-input class="search" placeholder="Search" floatingPlaceholder="false" [(ngModel)]="q"></md-input>
+    <md-input-container>
+      <input mdInput class="search" placeholder="Search" floatingPlaceholder="false" [(ngModel)]="q">
+    </md-input-container>
   </div>
   <md-card class="all-margin" *ngFor="let presentation of presentations | search:q">
     <md-card-title>{{presentation.title}}</md-card-title>
@@ -14,7 +16,7 @@
         <h4 *ngIf="presentation.shortDesc" class="text-justify">{{presentation.shortDesc}}</h4>
         <div *ngIf="presentation.longDesc" class="text-justify">"{{presentation.longDesc}}"</div>
         <div class="play-yt margin-top" *ngIf="presentation.video && currentVideo !== presentation.video">
-          <button md-raised-button color="primary" class="mr-5" (click)="setCurrentVideo(presentation.video)">Play video</button> or <a href="getLink('https://www.youtube.com/watch?v=' + presentation.video)" target="_blank" class="link">Open in YouTube</a>
+          <button md-raised-button color="primary" class="mr-5" (click)="setCurrentVideo(presentation.video)">Play video</button> or <a [href]="getLink('https://www.youtube.com/watch?v=' + presentation.video)" target="_blank" class="link">Open in YouTube</a>
         </div>
         <iframe class="margin-top" *ngIf="presentation.video && currentVideo === presentation.video" width="560" height="315" [src]="currentVideoLink" frameborder="0" allowfullscreen></iframe>
         <h3 *ngIf="presentation.presentation"><a [href]="getLink(presentation.presentation)" target="_blank" class="link">Open Slides / Presentation</a></h3>
